# llm_qus_analyzer

./: .gitignore  LICENSE  README.md  all_analyzers_results.json  an.py  analyze_by_criteria.py  cb.py  conflict_free_pair.json  featuremaker.ipynb  models.yaml  plan.md  pyproject.toml  semantic_analyzer.py  semantic_pragmatic_test.json  set.ipynb  story_chunks.json  test_uniform_fix.py  testcase.json
isolation/: README.md  an.py  analyze.py  analyze_lucassen.py  calculate_metrics.py  cb.py  chunk_lucassen.py  chunker.py  collect_violations.py  evaluation_results.json  extract_gt.py  extract_violation_stories.py  ground_truth.csv  ground_truth_extracted.json  helper.py  llm_stats.json  lucassen.csv  lucassen_analysis.json  lucassen_chunks.json  models.yaml  requirements.txt  violations_collected.json
isolation/analyze/: __init__.py  build_templates.py  build_templates_from_chunked.py  build_templates_per_model.py  build_templates_per_model_working.py  chunk_test.py  extract_gt.py  ground_truth_components.json  ground_truth_extracted.json  helper.py  test_atomic.py  test_complete.py  test_minimal.py  test_uniform.py  test_unique.py  test_wellformed.py
isolation/chunked_story.og/: Llama 17B-Instruct FP8.json  deepseek-chat.json  gpt-4.1-mini.json
isolation/chunked_story.read/: Llama 17B-Instruct FP8.json  deepseek-chat.json  (+1 more)
llm_qus_analyzer/: __init__.py  analyzer.py  client.py  settings.py  type.py  utils.py
output/: all_criteria_summary.json  conceptually-sound_analysis.json
pre-chunked/: conceptually-sound_chunks.json
testdata/: semantic_pragmatic_test.json
(+152 files in other folders)
